--- a/templates/admin/user/list.html.twig
+++ b/templates/admin/user/list.html.twig
@@ -38,6 +38,10 @@
 					<p>{{ user.roles|json_encode() }}</p>
 					<a class="page__text-link page__link_color_blue" href="{{ path('admin_address_user_list', {'id': user.id}) }}">Adresses</a>
 					<a class="page__text-link page__link_color_blue" href="{{ path('admin_purchase_user_list', {'id': user.id}) }}">Commandes</a>
+					<p>Créer le
+						{{ user.createdAt|format_datetime('short', 'none', locale='fr') }}</p>
+					<p>Mis à jour le
+						{{ user.updatedAt|format_datetime('short', 'none', locale='fr') }}</p>
 					<a class="page__link page__detail-link page__link_background-color_blue page__link_color_white" href="{{ path('admin_user_detail', {'id': user.id}) }}">Détails</a>
 					<a class="page__link page__update-link page__link_background-color_orange page__link_color_white" href="{{ path('admin_user_update', {'id': user.id}) }}">Modifier</a>
 					<a class="page__link page__delete-link page__user-delete-link page__link_background-color_red page__link_color_white" href="{{ path('admin_user_delete', {'id':user.id, 'token':csrf_token('admin-user-delete' ~ user.id)} ) }}" data-userfirstname="{{ user.firstName }}" data-userlastname="{{ user.lastName }}">
@@ -57,6 +61,8 @@
 						<th>Rôle(s)</th>
 						<th>Adresses</th>
 						<th>Commandes</th>
+						<th>Crée le</th>
+						<th>Mis à jour le</th>
 						<th>Actions</th>
 					</tr>
 				</thead>
@@ -79,6 +85,8 @@
 							<td>
 								<a class="page__text-link page__link_color_blue" href="{{ path('admin_purchase_user_list', {'id': user.id}) }}">Commandes</a>
 							</td>
+							<td>{{ user.createdAt|format_datetime('short', 'none', locale='fr') }}</td>
+							<td>{{ user.updatedAt|format_datetime('short', 'none', locale='fr') }}</td>
 							<td>
 								<a class="page__link page__detail-link page__link_background-color_blue page__link_color_white" href="{{ path('admin_user_detail', {'id': user.id}) }}">Détails</a>
 								<a class="page__link page__update-link page__link_background-color_orange page__link_color_white" href="{{ path('admin_user_update', {'id': user.id}) }}">Modifier</a>
