--- a/templates/category/list.html.twig
+++ b/templates/category/list.html.twig
@@ -11,11 +11,11 @@
 		<h2 class="page__h2">Nos Catégories</h2>
 		{{ form_start(categorySearchByNameForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'category-search-by-name-form' }}
 		) }}
-		<div class="form-field">
-			{{ form_label(categorySearchByNameForm, 'Rechercher par nom', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
-			{{ form_widget(categorySearchByNameForm.name, { 'id': 'category-name-input', 'attr': {'class': 'form-field__input form-field__category-name-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par nom' }}) }}
-			<p class="error-message error-message_color_red error-message-category-name display-none">
-				Merci de saisir un nom.
+		<div class="form-select-field">
+			{{ form_label(categorySearchByNameForm, 'Sélectionner une catégorie:', { 'label_attr': { 'class': 'form-field__label form-field__category-name-label display-none' }}) }}
+			{{ form_widget(categorySearchByNameForm.name) }}
+			<p class="error-message error-message_color_red error-message-category-name-not-select display-none">
+				Merci de sélectionner une catégorie.
 			</p>
 			{{ form_errors(categorySearchByNameForm.name) }}
 		</div>
